--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.15.0
   cloud_firestore: ^3.1.13
+  firebase_auth: ^3.3.15
 
 dev_dependencies:
   flutter_test:
