--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^1.15.0
   cloud_firestore: ^3.1.13
   firebase_auth: ^3.3.15
+  image_picker: ^0.8.5
 
 dev_dependencies:
   flutter_test:
