--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cloud_firestore: ^3.1.13
   firebase_auth: ^3.3.15
   image_picker: ^0.8.5
+  firebase_storage: ^10.2.14
+  firebase_messaging: ^11.2.15
 
 dev_dependencies:
   flutter_test:
